--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,52 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.Content{
+  display: flex;
+}
+
+.problem{
+  width: 20%;
+  min-height: 100vh;
+  background-color:aliceblue;
+}
+
+.selector{
+  display: flex;
+  justify-content: space-between;
+  margin: 10px;
+}
+
+.codeEditor{
+  width: 60%;
+  display: flex;
+  flex-direction: column;
+  background: #000;
+  color: #fff;
+}
+
+.runBtn{
+  width: 100px;
+  margin-top: 10px;
+  background: blue;
+  color: white;
+  padding: 10px;
+  outline: none;
+  border: none;
+}
+
+.outputWindow{
+  width: 20%;
+  min-height: 100vh;
+  background-color:lightblue;
+  color:#000;
+  text-align: left
+  
+}
+
+.outputHead{
+  background-color: #000;
+  color: #fff;
+  margin-top:-3px
+}
