--- a/src/index.css
+++ b/src/index.css
@@ -51,15 +51,17 @@ code {
   min-height: 100vh;
   background-color:lightblue;
   color:#000;
-  text-align: left
+  text-align: left;
+  white-space: pre;
   
+
 }
 
 .outputHead{
   background-color: #000;
   color: #fff;
   margin-top: 0PX;
-  padding: 5px 0;
+  padding: 5.5px 0;
 }
 
 .logo
