--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -1,23 +1,20 @@
 footer 
 {
+  width: 100%;
     background-color: #F8F9FA;
     font-size: 15px;
     font-family: Inter;
     font-style: normal;
     font-weight: 500;
     text-align: center;
-    position: absolute;
+    position: fixed;
+    bottom: 0;
     height: 50px;
-    width: 100%;
-    bottom: -165px;
 }
-
-.bottom 
-{
+.bottom{
   position: relative;
-  top: 18px;
+  top:20px
 }
-
 a
 {
   text-decoration: none;
