--- a/src/Components/Home/LearningPath/LearningPath.css
+++ b/src/Components/Home/LearningPath/LearningPath.css
@@ -1,10 +1,13 @@
+.exerciseSection{
+    display: flex;
+    justify-content: space-evenly;
+    margin-top: 50px;
+}
 .card-3
 {
     position: relative;
-    width: 783px;
-    height: 565px;
-    left: 56px;
-    top: 108px;
+    width: 60%;
+    height: 100vh;
     background: #F8F9FA;
     box-shadow: 0px 1px 0px #EFF0F1;
 }
