--- a/src/Components/LoginPage/LoginPage.css
+++ b/src/Components/LoginPage/LoginPage.css
@@ -1,62 +1,24 @@
-.form{
+.loginForm{
     width: 500px;
+    height: 200px;
     background:  #F8F9FA;
+    font-family: 'Inter';
     border-radius: 10px; 
+    margin-top:135px;
     margin-left:425px;
     padding-bottom: 10px;
     box-shadow:0 6px 16px 0 rgb(0 0 0 / 20%);
   }
   .tabs{
-    display: flex;
-    justify-content: center;
-    margin-top:100px;
-    width: 100%;
-    cursor: pointer;
     font-weight: 600;
     font-size: 22px;
+    background: #fff;
+    padding: 10px 0;
+    box-shadow:0 6px 16px 0 rgb(0 0 0 / 20%);
   }
   
-  .tab{
-    background:   #F8F9FA;
-    padding: 15px 20px;
-    flex-grow: 1;
-  }
-  .active{
-    background:#fff;
-    box-shadow:2px 0px 5px 0px #888888;
-    padding: 15px 20px;
-    flex-grow: 1;
-  }
-  .signInForm,.signUpForm{
-    margin: 30px 0;
-  }
-  
-  input[type='text'],input[type='email'],input[type='number']{
-    width:75%;
-    margin: 5px 10px;
-    border-radius: 10px;
-    padding: 10px;
-    font-size: 18px;
-    font-weight: 500;
-    background: #f3f7f7;
-    border: inset ;
-    outline: none;
-  }
-  .signupBtn{
-    width: 200px;
-    font-weight: 200;
-    font-size: 20px;
-    letter-spacing: 2px;
-    margin: 10px 8px; 
-    padding: 8px 20px;
-    background: #28A745;
-    border-radius: 20px;
-    color: white;
-    border: none;
-    cursor: pointer;
-  }
   #signInBtn{
-    padding:10px ;
+    margin-top: 60px;
     border-radius: 10px;
     font-weight: 200;
     font-size: 20px;
