--- a/src/Components/LoginPage/LoginPage.css
+++ b/src/Components/LoginPage/LoginPage.css
@@ -31,7 +31,7 @@
     margin: 30px 0;
   }
   
-  input[type='text'],input[type='email'],input[type='number']{
+  /* input[type='text'],input[type='email'],input[type='number']{
     width:75%;
     margin: 5px 10px;
     border-radius: 10px;
@@ -41,7 +41,7 @@
     background: #f3f7f7;
     border: inset ;
     outline: none;
-  }
+  } */
   .signupBtn{
     width: 200px;
     font-weight: 200;
