--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -6,10 +6,10 @@ footer
     font-style: normal;
     font-weight: 500;
     text-align: center;
-    position: absolute;
+    position: fixed;
     height: 50px;
     width: 100%;
-    bottom: -165px;
+    bottom: 0px;
 }
 
 .bottom 
