--- a/src/Components/Home/LearningPath/LearningPath.css
+++ b/src/Components/Home/LearningPath/LearningPath.css
@@ -7,6 +7,7 @@
     top: 108px;
     background: #F8F9FA;
     box-shadow: 0px 1px 0px #EFF0F1;
+    overflow: hidden;
 }
 
 .msg-2
@@ -21,98 +22,6 @@
     font-weight: 700;
     font-size: 22px;
     line-height: 27px;
-    color: #000000;
-}
-
-.module-1
-{
-    position: absolute;
-    right: 35px;
-    height: 59px;
-    left: 22px;
-    top: 70px;
-    background: white;
-    border: none;
-    box-shadow: 0px 3px 3px #EFF0F1;
-}
-
-.module-2
-{
-    position: absolute;
-    right: 35px;
-    height: 59px;
-    left: 22px;
-    top: 147px;
-    background: white;
-    border: none;
-    box-shadow: 0px 3px 3px #EFF0F1;
-}
-
-.module-3
-{
-    position: absolute;
-    right: 35px;
-    width: 726px;
-    height: 59px;
-    left: 22px;
-    top: 451px;
-    background: white;
-    border: none;
-    box-shadow: 0px 3px 3px #EFF0F1;
-}
-
-.module-2-content
-{
-    position: absolute;
-    width: 726px;
-    height: 220px;
-    left: 22px;
-    top: 213px;
-    background: #FFFFFF;
-}
-
-.module-1-name, .module-2-name
-{
-    position: absolute;
-    width: 195px;
-    height: 27px;
-    left: 13px;
-    top: 16px;
-    font-family: 'Inter';
-    font-style: normal;
-    font-weight: 700;
-    font-size: 22px;
-    line-height: 27px;
-    color: #000000;
-}
-
-.module-1-date
-{
-    position: absolute;
-    width: 157px;
-    height: 27px;
-    right: 79px;
-    top: 16px;
-    font-family: 'Inter';
-    font-style: normal;
-    font-weight: 700;
-    font-size: 22px;
-    line-height: 27px;
-    color: #000000;
-}
-
-.module-2-date
-{
-    position: absolute;
-    width: 266px;
-    height: 24px;
-    right: 76px;
-    top: 16px;
-    font-family: 'Inter';
-    font-style: normal;
-    font-weight: 100;
-    font-size: 20px;
-    line-height: 24px;
     color: #000000;
 }
 
@@ -140,16 +49,56 @@
     border: none;
 }
 
-.btn-due
+.header {
+    padding: 6px;
+    cursor: pointer;
+    display: flex;
+    justify-content: space-between;
+    background: white;
+    border-bottom: 10px solid #F8F9FA;
+    height: 45px;
+    margin-right: 27px;
+}
+
+.title {
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 22px;
+    line-height: 27px;
+    color: #000000;
+    position: relative;
+    top: 10px;
+    left: 13px;
+}
+
+.preferences
 {
-    background-color: #DD3646;
-    color: white;
-    justify-content: center;
-    align-items: center;
-    padding: 4.5px 12px;
-    gap: 10px;
-    width: 47px;
-    height: 24px;
-    border-radius: 20px;
-    border: none;
+    position: relative;
+    top: 60px;
+    padding-left: 22px;
+    /* max-height: 185px;
+    overflow: hidden; */
+}
+
+.date{
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 20px;
+    line-height: 27px;
+    color: #000000;
+    position: relative;
+    right: -160px;
+    top: 10px;
+}
+
+.icon
+{
+    padding-right: 25px;
+    padding-top: 7px;
+    font-size: 30px;
+    font-weight: 700;
+    font-style: normal;
+    font-family: Inter;
 }
