--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -9,10 +9,10 @@
 .profile 
 {
   border-radius: 50px; 
-  height: 50px;
-  position: absolute;
+  height: 35px;
+  position: relative;
   top: -7px;
-  right: 115px;
+  right: -85px;
 }
 
 #name 
@@ -20,9 +20,10 @@
   color: black;
   font-size: 20px;
   font-weight: bolder;
+  font-family: Inter;
   position: relative;
-  right: 10px;
-  top: 0px;
+  right: 50px;
+  top: -5px;
 }
 
 .nav-item 
@@ -55,5 +56,4 @@ header
 .nav-link
 {
   text-decoration: none;
-  cursor: pointer;
 }
