--- a/src/Components/Home/Alert/Alert.css
+++ b/src/Components/Home/Alert/Alert.css
@@ -1,4 +1,4 @@
-.card
+.cardAlert
 {
     background-color: #F8F9FA;
     position: absolute;
@@ -9,12 +9,12 @@
     box-shadow: 0px 1px 0px #EFF0F1;
 }
 
-.card-2
+.cardLine
 {
     background-color: #F55533;
     position: absolute;
-    width: 45px;
-    left: -26px;
+    width: 49px;
+    left: -19px;
     top: 24px;
     border: 4px solid #F55533;
     transform: rotate(90deg);
