--- a/src/Components/Home/LearningPath/LearningPath.css
+++ b/src/Components/Home/LearningPath/LearningPath.css
@@ -6,8 +6,10 @@
 .card-3
 {
     position: relative;
-    width: 60%;
-    height: 100vh;
+    width: 783px;
+    height: 565px;
+    left: 56px;
+    top: 108px;
     background: #F8F9FA;
     box-shadow: 0px 1px 0px #EFF0F1;
     overflow: hidden;
@@ -37,21 +39,6 @@
     bottom: 16.67%;
 }
 
-.btn-submit
-{
-    background-color: #28A745;
-    color: white;
-    justify-content: center;
-    align-items: center;
-    padding: 4.5px 12.5px;
-    gap: 10px;
-    width: 85px;
-    height: 24px;
-    border-radius: 20px;
-    order: 1;
-    border: none;
-}
-
 .header {
     padding: 6px;
     cursor: pointer;
@@ -59,7 +46,7 @@
     justify-content: space-between;
     background: white;
     border-bottom: 10px solid #F8F9FA;
-    height: 45px;
+    height: 65px;
     margin-right: 27px;
 }
 
@@ -99,7 +86,7 @@
 .icon
 {
     padding-right: 25px;
-    padding-top: 7px;
+    padding-top: 0px;
     font-size: 30px;
     font-weight: 700;
     font-style: normal;
