--- a/src/Components/CodeSection/editorPage.css
+++ b/src/Components/CodeSection/editorPage.css
@@ -8,7 +8,7 @@ body {
 .main-container {
   display: flex;
   flex-direction: row;
-  margin-top: 10px;
+  margin :67px 10px 0
 }
 
 .problem {
@@ -32,6 +32,7 @@ body {
   font-weight: 500;
   font-size: 18px;
   line-height: 22px;
+  margin-left: 10px;
 }
 
 .selector {
@@ -141,7 +142,7 @@ body {
   font-weight: 700;
   font-size: 22px;
   line-height: 27px;
-  margin-top: 0PX;
+  margin:0 10px;
   padding: 5px 0;
 }
 
