--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -1,59 +1,47 @@
+.header
+{
+  position: fixed;
+  background-color: #F8F9FA;
+  top: 0;
+  width: 100%;
+  height: 50px;
+}
+
 .logo 
 {
   height: 26px;
   margin: 10px;
-  position: relative;
-  padding-top: 3px;
+  float: left;
 }
 
-.profile 
+.logInProfile 
 {
   border-radius: 50px; 
   height: 35px;
-  position: relative;
-  top: -7px;
-  right: -85px;
+  position: absolute;
+  right: 75px;
+  top:7px
 }
 
-#name 
+#logInName 
 {
   color: black;
   font-size: 20px;
   font-weight: bolder;
   font-family: Inter;
-  position: relative;
-  right: 50px;
-  top: -5px;
-}
-
-.nav-item 
-{
-  display: inline-flex;
   position: absolute;
-  left: 5px;
+  right: 120px;
+  top: 10px;
 }
 
-header
-{
-  background-color: #F8F9FA;
-  height: 50px;
-}
-
-.logout 
-{
-  display: inline-flex;
-  position: absolute;
-  right: 10px;
-  top: 13px;
+.logoutLink{
+  float: right;
+  text-decoration: none;
+  margin:10px;
   font-weight: 500;
   font-size: 12px;
   font-family: Inter;
   font-style: normal;
   font-size: larger;
   color: gray;
-}
-
-.nav-link
-{
-  text-decoration: none;
 }
