--- a/src/Components/Home/LearningPath/LearningPath.css
+++ b/src/Components/Home/LearningPath/LearningPath.css
@@ -1,56 +1,75 @@
-.exerciseSection{
+.homePage {
     display: flex;
-    justify-content: space-evenly;
-    margin-top: 50px;
-}
-.card-3
-{
-    position: relative;
-    width: 783px;
-    height: 565px;
-    left: 56px;
-    top: 108px;
-    background: #F8F9FA;
-    box-shadow: 0px 1px 0px #EFF0F1;
-    overflow: hidden;
+    flex-direction: column;
+    margin-top: 70px;
+    overflow: auto;
 }
 
-.msg-2
-{
-    position: absolute;
-    width: 259px;
-    height: 27px;
-    left: 20px;
-    top: 20px;
+.lpAlert {
+    background-color: #F8F9FA;
+    padding: 10px 0;
+    margin: 0 46px;
+    text-align: left;
+    box-shadow: 0px 1px 0px #EFF0F1;
+}
+
+.lpLine {
+    border: 2px solid #F55533;
+    padding: 13px 0;
+}
+
+.lpAlertMsg {
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 18px;
+    line-height: 17px;
+    color: #000000;
+    margin-left: 20px;
+}
+
+.dangerIcon {
+    box-sizing: border-box;
+    width: 22px;
+    height: 22px;
+    color: #F30D0D;
+}
+
+.lpPathSection {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly   ;
+    margin: 20px 0px;
+    height: calc(100vh - 33vh)
+}
+
+.learningPath {
+    background: #F8F9FA;
+    box-shadow: 0px 1px 0px #EFF0F1;
+    overflow: auto;
+    width: 65%;
+    text-align: left;
+}
+.lpTitle{
     font-family: 'Inter';
     font-style: normal;
     font-weight: 700;
     font-size: 22px;
     line-height: 27px;
     color: #000000;
+    padding:10px;
+    margin-left: 20px;
 }
-
-.plus
-{
-    position: absolute;
-    left: 94.67%;
-    right: 23.67%;
-    top: 25px;
-    bottom: 16.67%;
-}
-
-.header {
-    padding: 6px;
+.lpModule{
+    padding:15px 6px;
     cursor: pointer;
     display: flex;
     justify-content: space-between;
     background: white;
-    border-bottom: 10px solid #F8F9FA;
-    height: 65px;
-    margin-right: 27px;
+    margin: 0 27px 20px;
+    box-shadow: 2px 5px 4px #EFF0F1;
 }
-
-.title {
+.lpModuleTitle{
     font-family: 'Inter';
     font-style: normal;
     font-weight: 700;
@@ -58,20 +77,9 @@
     line-height: 27px;
     color: #000000;
     position: relative;
-    top: 10px;
     left: 13px;
 }
-
-.preferences
-{
-    position: relative;
-    top: 60px;
-    padding-left: 22px;
-    /* max-height: 185px;
-    overflow: hidden; */
-}
-
-.date{
+.lpModuleDate{
     font-family: 'Inter';
     font-style: normal;
     font-weight: 700;
@@ -79,16 +87,14 @@
     line-height: 27px;
     color: #000000;
     position: relative;
-    right: -160px;
-    top: 10px;
+    right: 60px;
 }
-
-.icon
-{
-    padding-right: 25px;
-    padding-top: 0px;
+.lpModuleDropdownIcon{
     font-size: 30px;
     font-weight: 700;
     font-style: normal;
     font-family: Inter;
+    position: relative;
+    left: 20px;
+    top:3px
 }
