--- a/src/Components/CodeSection/editorPage.css
+++ b/src/Components/CodeSection/editorPage.css
@@ -2,13 +2,13 @@ body {
   width: 100%;
   margin: 0;
   background: #fff;
-  font-family: 'Inter';
+  font-family: 'Poppins';
 }
 
 .main-container {
   display: flex;
   flex-direction: row;
-  margin :67px 10px 0
+  margin: 67px 10px 0
 }
 
 .problem {
@@ -16,7 +16,7 @@ body {
   width: 100%;
   background-color: #F8F9FA;
   text-align: left;
-  font-family: 'Inter';
+  font-family: 'Poppins';
   font-style: normal;
   font-weight: 700;
   font-size: 22px;
@@ -27,7 +27,7 @@ body {
 }
 
 .question {
-  font-family: 'Inter';
+  font-family: 'Poppins';
   font-style: normal;
   font-weight: 500;
   font-size: 18px;
@@ -40,7 +40,7 @@ body {
   justify-content: space-between;
   margin: 10px;
   width: 100%;
-  font-family: 'Inter';
+  font-family: 'Poppins';
   font-style: normal;
   font-weight: 500;
   font-size: 18px;
@@ -70,7 +70,7 @@ body {
   width: 100px;
   margin: 10px 8px;
   align-items: center;
-  font-family: 'Inter';
+  font-family: 'Poppins';
   font-style: normal;
   font-weight: 500;
   font-size: 18px;
@@ -103,7 +103,7 @@ body {
 
 .customInputLabel {
   margin: 10px 0 0 10px;
-  font-family: 'Inter';
+  font-family: 'Poppins';
   font-style: normal;
   font-weight: 500;
   font-size: 18px;
@@ -120,7 +120,7 @@ body {
   background-color: #F8F9FA;
   color: #202020;
   text-align: left;
-  font-family: 'Inter';
+  font-family: 'Poppins';
   font-style: normal;
   font-weight: 500;
   font-size: 18px;
@@ -137,12 +137,12 @@ body {
 
 .outputHead {
   color: #fff;
-  font-family: 'Inter';
+  font-family: 'Poppins';
   font-style: normal;
   font-weight: 700;
   font-size: 22px;
   line-height: 27px;
-  margin:0 10px;
+  margin: 0 10px;
   padding: 5px 0;
 }
 
