--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -1,22 +1,22 @@
-footer 
-{
+footer {
   width: 100%;
-    background-color: #F8F9FA;
-    font-size: 15px;
-    font-family: Inter;
-    font-style: normal;
-    font-weight: 500;
-    text-align: center;
-    position: fixed;
-    bottom: 0;
-    height: 50px;
+  background-color: #F8F9FA;
+  font-size: 15px;
+  font-family: 'Poppins';
+  font-style: normal;
+  font-weight: 500;
+  text-align: center;
+  position: fixed;
+  bottom: 0;
+  height: 50px;
 }
-.bottom{
+
+.footerContent {
   position: relative;
-  top:20px
+  top: 20px
 }
-a
-{
+
+a {
   text-decoration: none;
   color: #5F6368;
 }
