--- a/src/Components/LoginPage/LoginPage.css
+++ b/src/Components/LoginPage/LoginPage.css
@@ -1,28 +1,29 @@
-.loginForm{
-    width: 500px;
-    height: 200px;
-    background:  #F8F9FA;
-    font-family: 'Inter';
-    border-radius: 10px; 
-    margin-top:135px;
-    margin-left:425px;
-    padding-bottom: 10px;
-    box-shadow:0 6px 16px 0 rgb(0 0 0 / 20%);
-  }
-  .tabs{
-    font-weight: 600;
-    font-size: 22px;
-    background: #fff;
-    padding: 10px 0;
-    box-shadow:0 6px 16px 0 rgb(0 0 0 / 20%);
-  }
-  
-  #signInBtn{
-    margin-top: 60px;
-    border-radius: 10px;
-    font-weight: 200;
-    font-size: 20px;
-    background: #4285F4;
-    color: #eee;
-    border: none;
-  }
+.loginForm {
+  width: 500px;
+  height: 200px;
+  background: #F8F9FA;
+  font-family: 'Poppins';
+  border-radius: 10px;
+  margin-top: 135px;
+  margin-left: 425px;
+  padding-bottom: 10px;
+  box-shadow: 0 6px 16px 0 rgb(0 0 0 / 20%);
+}
+
+.tabs {
+  font-weight: 600;
+  font-size: 22px;
+  background: #fff;
+  padding: 10px 0;
+  box-shadow: 0 6px 16px 0 rgb(0 0 0 / 20%);
+}
+
+#signInBtn {
+  margin-top: 60px;
+  border-radius: 10px;
+  font-weight: 200;
+  font-size: 20px;
+  background: #4285F4;
+  color: #eee;
+  border: none;
+}
