--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -30,6 +30,15 @@
   top: 10px;
 }
 
+.timer{
+  color: black;
+  font-size: 18px;
+  font-weight: 600;
+  font-family: 'Poppins';
+  position: absolute;
+  right: 320px;
+  top: 12px;
+}
 .logoutLink {
   float: right;
   text-decoration: none;
