--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,7 @@
 body 
 {
   margin: 0;
-  font-family: 'Inter',sans-serif;
+  font-family: 'Poppins';
   font-size: 'normal';
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
