--- a/src/Components/Report/report.css
+++ b/src/Components/Report/report.css
@@ -1,3 +1,8 @@
+.loadIndicator{
+    position: absolute;
+    top: 40%;
+    left:45%
+}
 .container-fluid{
     margin-top: 100px;
     font-family: 'Poppins';
